--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ramda-e",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "dev": "rollup -c -w"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,18 @@
   "bugs": {
     "url": "https://github.com/superwy/ramda-e/issues"
   },
-  "homepage": "https://github.com/superwy/ramda-e#readme"
+  "homepage": "https://github.com/superwy/ramda-e#readme",
+  "peerDependencies": {
+    "ramda": "^0.25.0"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-latest": "^6.24.1",
+    "rollup": "^0.54.1",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-buble": "^0.18.0",
+    "rollup-plugin-node-resolve": "^3.0.2"
+  }
 }
