--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "bugs": {
     "url": "https://github.com/superwy/ramda-e/issues"
   },
+  "files": [
+    "dist"
+  ],
   "homepage": "https://github.com/superwy/ramda-e#readme",
   "peerDependencies": {
     "ramda": "^0.25.0"
