--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "@superwy/ramda-e",
   "version": "0.0.1",
   "description": "",
-  "main": "dist/ramda-e.js",
+  "module": "es/index.js",
+  "main": "src/index.js",
+  "unpkg": "dist/ramda-e.min.js",
+  "jsdelivr": "dist/ramda-e.min.js",
   "scripts": {
-    "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/ramda-e.js",
-    "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/ramda-e.min.js",
-    "build": "npm run build:umd && npm run build:umd:min",
+    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
+    "build:cjs": "cross-env BABEL_ENV=cjs babel src --out-dir src",
+    "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/ramda.js",
+    "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/ramda.min.js",
+    "build": "npm run build:es && npm run build:cjs && npm run build:umd && npm run build:umd:min",
     "dev": "rollup -c -w"
   },
   "repository": {
@@ -19,6 +24,8 @@
     "url": "https://github.com/superwy/ramda-e/issues"
   },
   "files": [
+    "es",
+    "src",
     "dist"
   ],
   "homepage": "https://github.com/superwy/ramda-e#readme",
