--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@superwy/ramda-e",
   "version": "0.0.2",
   "description": "",
-  "main": "dist/ramda-e-min.js",
+  "main": "./dist/ramda-e-min.js",
   "typings": "src/index.d.ts",
   "scripts": {
     "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/ramda-e.js",
